crates/toml_edit/tests/snapshots/invalid/local-datetime/no-secs.stderr
TOML parse error at line 2, column 11
  |
2 | no-secs = 1987-07-05T17:45
  |           ^^^^^^^^^^^^^^^^
invalid time, expected `:` (MM:SS)
